fix overflow bug with banners

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -189,6 +189,7 @@ h1{
 .home-section{
   border-bottom: 2px solid $light-border;
   padding-top: $header-height;
+  overflow: hidden;
 }
 
 #hero{
